examples/test/testpolicy3169.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3169
  namespace: namespace481
spec:
  podSelector:
    matchLabels:
      key0: value35
      key34: value24
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key8: value10
          key43: value47
          key0: value24
      podSelector:
        matchLabels:
          key5: value33
